--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
