--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
